# plotlydash-flask-tutorial

./: .env.example  .flake8  .gitignore  Dockerfile  Makefile  Pipfile  Procfile  README.md  config.py  deploy.sh  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  start.sh  wsgi.py
.github/: FUNDING.yml
.github/workflows/: linter.yml
Dash_App/: dash_view.py
application/: __init__.py  assets.py  routes.py
application/dash_application/: dash_example.py  layout.py
application/plotlydash/: dashboard.py  layout.py
application/static/less/: global.less  header.less  home.less  table.less
application/templates/: analytics.jinja2  index.html  index.jinja2  layout.jinja2  nav.html  nav.jinja2
data/: 311-calls.csv  calls.csv  chicago_taxis.csv  citibike_trips.csv  cities.csv  constituency_uk_2019.csv  input.csv  output.csv  parties.csv  pocket.csv
plotly_flask_tutorial/: __init__.py  assets.py  dash_view.py  routes.py
plotly_flask_tutorial/dashboard/: __init__.py  data.py  layout.py
plotly_flask_tutorial/plotly_dash_views/: __init__.py  dataframes.py
plotly_flask_tutorial/plotly_dash_views/templates/: index.html
plotly_flask_tutorial/static/js/: main.js
plotly_flask_tutorial/static/less/: global.less  header.less  home.less  table.less
plotly_flask_tutorial/templates/: index.html  index.jinja2  layout.jinja2  nav.html
plotlydash_flask_tutorial/plotlydash/: dashboard.py  data.py
plotlydash_flask_tutorial/static/less/: header.less  table.less
plotlyflask/: __init__.py  routes.py
plotlyflask/plotlydash/: dashboard.py  data.py  layout.py
plotlyflask/static/less/: global.less  table.less
plotlyflask/templates/: index.jinja2  layout.jinja2
plotlyflask_tutorial/: __init__.py  assets.py  routes.py
plotlyflask_tutorial/plotlydash/: dashboard.py  data.py
plotlyflask_tutorial/templates/: index.jinja2
