[tool.poetry]
name = "plotlydash_flask_tutorial"
version = "0.1.0"
description = "Integrate Plotly Dash into your Flask applications."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/plotly-dash-with-flask/"
repository = "https://github.com/toddbirchard/plotlydash-flask-tutorial/"
documentation = "https://hackersandslackers.com/plotly-dash-with-flask/"
keywords = [
    "Flask",
    "Plotly",
    "Plotly Dash",
    "Data Science",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.8"
flask = "*"
flask_assets = "*"
dash = "*"
dash_table = "*"
dash_core_components = "*"
dash_html_components = "*"
dash-renderer = "*"
pandas = "*"
python-dotenv = "*"
uWSGI = "^2.0.19"
ddtrace = "^0.55.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^20.8b1"
isort = "^5.6.4"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/plotlydash-flask-tutorial/issues"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

