[tool.poetry]
name = "plotlydash_flask_tutorial"
version = "0.1.0"
description = "Integrate Plotly Dash into your Flask applications."
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
maintainers = ["Todd Birchard <toddbirchard@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/plotly-dash-with-flask/"
repository = "https://github.com/toddbirchard/plotlydash-flask-tutorial/"
documentation = "https://hackersandslackers.com/plotly-dash-with-flask/"
keywords = [
    "Flask",
    "Plotly",
    "Plotly Dash",
    "Data Science",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
flask_assets = "*"
dash = "*"
dash_table = "*"
dash_core_components = "*"
dash_html_components = "*"
dash-renderer = "*"
pandas = "*"
python-dotenv = "*"
uWSGI = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
coverage = "*"
mypy = "*"
flake8 = "*"
pylint = "*"
black = "*"
isort = "*"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/plotlydash-flask-tutorial/issues"

[build-system]
requires = ["poetry>=1.1.13"]
build-backend = "poetry.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable="C0103,C0301,W0703,W0621"
